crates/mun_codegen/src/snapshots/test__arithmetic_op_f64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn add(a: f64, b: f64) -> f64 { a + b }\npub fn subtract(a: f64, b: f64) -> f64 { a - b }\npub fn multiply(a: f64, b: f64) -> f64 { a * b }\npub fn divide(a: f64, b: f64) -> f64 { a / b }\npub fn remainder(a: f64, b: f64) -> f64 { a % b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo*]

define double @add(double, double) {
body:
  %add = fadd double %0, %1
  ret double %add
}

define double @subtract(double, double) {
body:
  %sub = fsub double %0, %1
  ret double %sub
}

define double @multiply(double, double) {
body:
  %mul = fmul double %0, %1
  ret double %mul
}

define double @divide(double, double) {
body:
  %div = fdiv double %0, %1
  ret double %div
}

define double @remainder(double, double) {
body:
  %rem = frem double %0, %1
  ret double %rem
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@"type_info::<core::f64>::name" = private unnamed_addr constant [10 x i8] c"core::f64\00"
@"type_info::<core::f64>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"`\DBF\9C?YJ%G\AD4\9F\D5\92%A", [10 x i8]* @"type_info::<core::f64>::name", i32 64, i8 8, i8 0 }
@global_type_table = constant [1 x %struct.MunTypeInfo*] [%struct.MunTypeInfo* @"type_info::<core::f64>"]

