crates/mun_codegen/src/snapshots/test__arithmetic_op_i16.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn add(a: i16, b: i16) -> i16 { a + b }\npub fn subtract(a: i16, b: i16) -> i16 { a - b }\npub fn multiply(a: i16, b: i16) -> i16 { a * b }\npub fn divide(a: i16, b: i16) -> i16 { a / b }\npub fn remainder(a: i16, b: i16) -> i16 { a % b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo addrspace(4)*]

define i16 @add(i16, i16) {
body:
  %add = add i16 %0, %1
  ret i16 %add
}

define i16 @subtract(i16, i16) {
body:
  %sub = sub i16 %0, %1
  ret i16 %sub
}

define i16 @multiply(i16, i16) {
body:
  %mul = mul i16 %0, %1
  ret i16 %mul
}

define i16 @divide(i16, i16) {
body:
  %div = sdiv i16 %0, %1
  ret i16 %div
}

define i16 @remainder(i16, i16) {
body:
  %rem = srem i16 %0, %1
  ret i16 %rem
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::i16>::name" = private unnamed_addr constant [10 x i8] c"core::i16\00"
@"type_info::<core::i16>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\05\CD|\F8Bv\D8\B1\E8\8B\8C\D8\8D\B5\89\B0", [10 x i8]* @"type_info::<core::i16>::name", i32 16, i8 2, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::i16>"]

