crates/mun_codegen/src/snapshots/test__assignment_op_u16.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn assign(a: u16, b: u16) -> u16 {\n    a = b;\n    a\n}\npub fn assign_add(a: u16, b: u16) -> u16 {\n    a += b;\n    a\n}\npub fn assign_subtract(a: u16, b: u16) -> u16 {\n    a -= b;\n    a\n}\npub fn assign_multiply(a: u16, b: u16) -> u16 {\n    a *= b;\n    a\n}\npub fn assign_divide(a: u16, b: u16) -> u16 {\n    a /= b;\n    a\n}\npub fn assign_remainder(a: u16, b: u16) -> u16 {\n    a %= b;\n    a\n}"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo*]

define i16 @assign(i16, i16) {
body:
  ret i16 %1
}

define i16 @assign_add(i16, i16) {
body:
  %add = add i16 %0, %1
  ret i16 %add
}

define i16 @assign_subtract(i16, i16) {
body:
  %sub = sub i16 %0, %1
  ret i16 %sub
}

define i16 @assign_multiply(i16, i16) {
body:
  %mul = mul i16 %0, %1
  ret i16 %mul
}

define i16 @assign_divide(i16, i16) {
body:
  %div = udiv i16 %0, %1
  ret i16 %div
}

define i16 @assign_remainder(i16, i16) {
body:
  %rem = urem i16 %0, %1
  ret i16 %rem
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@"type_info::<core::u16>::name" = private unnamed_addr constant [10 x i8] c"core::u16\00"
@"type_info::<core::u16>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"0\01\BC\BBK\E0\F2\7F&l\01\CD|q\F2\B3", i8* getelementptr inbounds ([10 x i8], [10 x i8]* @"type_info::<core::u16>::name", i32 0, i32 0), i32 16, i8 2, i8 0 }
@global_type_table = constant [1 x %struct.MunTypeInfo*] [%struct.MunTypeInfo* @"type_info::<core::u16>"]

